# ip-monitor-kde-plasmoid

./: CMakeLists.txt  README
applet/: CMakeLists.txt  metadata.desktop
applet/contents/ui/: main.qml
dataengine/: CMakeLists.txt  Makefile  ipmonitorengine.cpp  ipmonitorengine.h  plasma-engine-ipmonitor.desktop
